# app-container

./: .gitignore  LICENSE  Makefile  README.md  base_images.sh  include.mk
.circleci/: config.yml
activemq/: Dockerfile.tpl  README.md  release.tag  version-lock.sh
antora/: Dockerfile.tpl  README.md  release.tag  version-lock.sh
cerebro/: BUILD.bazel  Dockerfile.tpl  README.md  WORKSPACE.bazel  bazel-bin  bazel-cerebro  bazel-out  bazel-testlogs  release.tag  version-lock.sh
coolmodfiles/: Dockerfile.tpl  release.tag  version-lock.sh
diag/: Dockerfile.tpl  release.tag  version-lock.sh
dupligator/: Dockerfile.tpl  release.tag  version-lock.sh
featmap/: Dockerfile.tpl  README.md  conf.json.example  release.tag  version-lock.sh
freeradius/: Dockerfile.tpl  release.tag  version-lock.sh
frrouting/: Dockerfile.tpl  docker-start  release.tag  version-lock.sh
git/: Dockerfile.tpl  init.sh  release.tag  version-lock.sh
gobetween/: Dockerfile.tpl  release.tag  version-lock.sh
gobgp/: Dockerfile.tpl  release.tag  version-lock.sh
gohugo/: Dockerfile.tpl  release.tag  version-lock.sh
haste-server/: Dockerfile.tpl  release.tag  version-lock.sh
horizon-stream/: Dockerfile.tpl  release.tag  version-lock.sh
hzn-init-helper/: Dockerfile.tpl  release.tag  version-lock.sh
jira-exporter/: Dockerfile.tpl  release.tag  version-lock.sh
karaf/: Dockerfile.tpl  release.tag  version-lock.sh
lldpd/: Dockerfile.tpl  entrypoint.sh  release.tag  version-lock.sh
mail-lab/: Dockerfile.tpl  release.tag  version-lock.sh
maven-11-jdk/: release.tag  version-lock.sh
(+61 files in other folders)
